--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     color: rgb(80, 80, 150);
 }
 
+
 body {
     min-height: 100vh;
     display: flex;
@@ -275,12 +276,30 @@ h3 {
 
 /* Footer */
 footer {
-    margin-top: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
+    background-color: rgb(255, 219, 64);
+    font-family: 'Roboto', sans-serif;
+    margin-top: auto;
     text-align: center;
     padding: 20px;
-    background-color: var(--yellow);
 }
+
+h4 {
+    font-size: 1.1rem;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 12px;
+    color: black;
+    padding-right: 2px; /* Add this line */
+    padding-left: 1px; /* Add this line */
+
+}
+
+
+
 
 /* Media Query */
 @media only screen and (max-width: 1200px) {
